--- a/rules.conf
+++ b/rules.conf
@@ -115,6 +115,7 @@ DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
+DOMAIN-SUFFIX,alibabachengdun.com,DIRECT
 DOMAIN-SUFFIX,alibabacloud.com,DIRECT
 DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
@@ -139,6 +140,7 @@ DOMAIN-SUFFIX,animebytes.tv,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
 DOMAIN-SUFFIX,annualreviews.org,DIRECT
 DOMAIN-SUFFIX,anquan.info,DIRECT
+DOMAIN-SUFFIX,anythinktech.com,DIRECT
 DOMAIN-SUFFIX,aoqijiaoyu.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
 DOMAIN-SUFFIX,appadhoc.com,DIRECT
@@ -172,6 +174,7 @@ DOMAIN-SUFFIX,battle.net,DIRECT
 DOMAIN-SUFFIX,bazhuayu.com,DIRECT
 DOMAIN-SUFFIX,bazi.chat,DIRECT
 DOMAIN-SUFFIX,bcebos.com,DIRECT
+DOMAIN-SUFFIX,bcelive.com,DIRECT
 DOMAIN-SUFFIX,bdatu.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
@@ -197,6 +200,7 @@ DOMAIN-SUFFIX,bjcathay.com,DIRECT
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,bmcx.com,DIRECT
 DOMAIN-SUFFIX,bmj.com,DIRECT
+DOMAIN-SUFFIX,boce.com,DIRECT
 DOMAIN-SUFFIX,booking.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.net,DIRECT
 DOMAIN-SUFFIX,bootcss.com,DIRECT
@@ -233,6 +237,7 @@ DOMAIN-SUFFIX,ccgslb.net,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
 DOMAIN-SUFFIX,cdn.angruo.com,DIRECT
+DOMAIN-SUFFIX,cdnhwc2.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
@@ -240,9 +245,11 @@ DOMAIN-SUFFIX,chazidian.com,DIRECT
 DOMAIN-SUFFIX,chdbits.co,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
 DOMAIN-SUFFIX,chebiao.net,DIRECT
+DOMAIN-SUFFIX,chengxinyouxuan.com,DIRECT
 DOMAIN-SUFFIX,chepx.com,DIRECT
 DOMAIN-SUFFIX,china.com,DIRECT
 DOMAIN-SUFFIX,chinadsl.net,DIRECT
+DOMAIN-SUFFIX,chinamobile.com,DIRECT
 DOMAIN-SUFFIX,chinanetcenter.com,DIRECT
 DOMAIN-SUFFIX,chinaso.com,DIRECT
 DOMAIN-SUFFIX,chinasolargard.com,DIRECT
@@ -280,6 +287,7 @@ DOMAIN-SUFFIX,crsky.com,DIRECT
 DOMAIN-SUFFIX,csair.com,DIRECT
 DOMAIN-SUFFIX,csdn.net,DIRECT
 DOMAIN-SUFFIX,cssmoban.com,DIRECT
+DOMAIN-SUFFIX,ctobsnssdk.com,DIRECT
 DOMAIN-SUFFIX,ctrip.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
 DOMAIN-SUFFIX,czybjz.com,DIRECT
@@ -299,7 +307,7 @@ DOMAIN-SUFFIX,dfcfw.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
 DOMAIN-SUFFIX,didialift.com,DIRECT
 DOMAIN-SUFFIX,didiglobal.com,DIRECT
-DOMAIN-SUFFIX,digitalartery.com.au,DIRECT
+DOMAIN-SUFFIX,didistatic.com,DIRECT
 DOMAIN-SUFFIX,dingtalk.com,DIRECT
 DOMAIN-SUFFIX,dingxiang-inc.com,DIRECT
 DOMAIN-SUFFIX,diyifanwen.com,DIRECT
@@ -327,12 +335,14 @@ DOMAIN-SUFFIX,duitang.com,DIRECT
 DOMAIN-SUFFIX,duokan.com,DIRECT
 DOMAIN-SUFFIX,duolabao.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
+DOMAIN-SUFFIX,dutils.com,DIRECT
 DOMAIN-SUFFIX,dxycdn.com,DIRECT
 DOMAIN-SUFFIX,dytt8.net,DIRECT
 DOMAIN-SUFFIX,dz11.com,DIRECT
 DOMAIN-SUFFIX,easebar.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
 DOMAIN-SUFFIX,eastmoney.com,DIRECT
+DOMAIN-SUFFIX,easytomessage.com,DIRECT
 DOMAIN-SUFFIX,ebscohost.com,DIRECT
 DOMAIN-SUFFIX,ecitic.com,DIRECT
 DOMAIN-SUFFIX,ecombdapi.com,DIRECT
@@ -402,7 +412,7 @@ DOMAIN-SUFFIX,guoxueziyuan.com,DIRECT
 DOMAIN-SUFFIX,gushici.net,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
 DOMAIN-SUFFIX,haier.com,DIRECT
-DOMAIN-SUFFIX,hanmarketing.com.au,DIRECT
+DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
 DOMAIN-SUFFIX,hc-cdn.com,DIRECT
@@ -422,6 +432,7 @@ DOMAIN-SUFFIX,hongxiu.com,DIRECT
 DOMAIN-SUFFIX,hostbuf.com,DIRECT
 DOMAIN-SUFFIX,hozonauto.com,DIRECT
 DOMAIN-SUFFIX,httpcn.com,DIRECT
+DOMAIN-SUFFIX,httpdns.pro,DIRECT
 DOMAIN-SUFFIX,huaban.com,DIRECT
 DOMAIN-SUFFIX,huangli.com,DIRECT
 DOMAIN-SUFFIX,huashu-inc.com,DIRECT
@@ -485,6 +496,7 @@ DOMAIN-SUFFIX,jb51.net,DIRECT
 DOMAIN-SUFFIX,jcloud.com,DIRECT
 DOMAIN-SUFFIX,jd.com,DIRECT
 DOMAIN-SUFFIX,jd.hk,DIRECT
+DOMAIN-SUFFIX,jdapi.com,DIRECT
 DOMAIN-SUFFIX,jdbusiness.com,DIRECT
 DOMAIN-SUFFIX,jdcloud.com,DIRECT
 DOMAIN-SUFFIX,jdl.com,DIRECT
@@ -521,12 +533,15 @@ DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
+DOMAIN-SUFFIX,komect.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
+DOMAIN-SUFFIX,ksyun.com,DIRECT
 DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
+DOMAIN-SUFFIX,kuaishouzt.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,kuiniuca.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
@@ -590,14 +605,18 @@ DOMAIN-SUFFIX,mgtv.com,DIRECT
 DOMAIN-SUFFIX,mi.com,DIRECT
 DOMAIN-SUFFIX,mianyangauto.com,DIRECT
 DOMAIN-SUFFIX,miaopai.com,DIRECT
+DOMAIN-SUFFIX,miaozhen.com,DIRECT
 DOMAIN-SUFFIX,miercn.com,DIRECT
+DOMAIN-SUFFIX,miguvideo.com,DIRECT
 DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,minapp.com,DIRECT
 DOMAIN-SUFFIX,miui.com,DIRECT
 DOMAIN-SUFFIX,miwifi.com,DIRECT
+DOMAIN-SUFFIX,mmarket.com,DIRECT
 DOMAIN-SUFFIX,mmstat.com,DIRECT
 DOMAIN-SUFFIX,mob.com,DIRECT
 DOMAIN-SUFFIX,mobike.com,DIRECT
+DOMAIN-SUFFIX,mobsurl.com,DIRECT
 DOMAIN-SUFFIX,mogucdn.com,DIRECT
 DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,moke.com,DIRECT
@@ -651,6 +670,8 @@ DOMAIN-SUFFIX,oxfordmusiconline.com,DIRECT
 DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panda.tv,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
+DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
+DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
 DOMAIN-SUFFIX,passthepopcorn.me,DIRECT
 DOMAIN-SUFFIX,pastebin.com,DIRECT
 DOMAIN-SUFFIX,paypal.com,DIRECT
@@ -658,6 +679,7 @@ DOMAIN-SUFFIX,paypalobjects.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pexels.com,DIRECT
+DOMAIN-SUFFIX,pglstatp-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pianbar.com,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
 DOMAIN-SUFFIX,pluwen.com,DIRECT
@@ -730,6 +752,7 @@ DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,siam.org,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
+DOMAIN-SUFFIX,sinaapp.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,slack.com,DIRECT
 DOMAIN-SUFFIX,sm.ms,DIRECT
@@ -789,6 +812,7 @@ DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,teamviewer.com,DIRECT
+DOMAIN-SUFFIX,tec73.com,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
@@ -810,6 +834,7 @@ DOMAIN-SUFFIX,tmxbk39.com,DIRECT
 DOMAIN-SUFFIX,tongdun.net,DIRECT
 DOMAIN-SUFFIX,tongrentang.com,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
+DOMAIN-SUFFIX,toponad.com,DIRECT
 DOMAIN-SUFFIX,totheglory.im,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
@@ -824,8 +849,10 @@ DOMAIN-SUFFIX,tvmao.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
 DOMAIN-SUFFIX,udacity.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
+DOMAIN-SUFFIX,ugdtimg.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
+DOMAIN-SUFFIX,umengcloud.com,DIRECT
 DOMAIN-SUFFIX,un.org,DIRECT
 DOMAIN-SUFFIX,undraw.co,DIRECT
 DOMAIN-SUFFIX,uni-bielefeld.de,DIRECT
@@ -833,6 +860,7 @@ DOMAIN-SUFFIX,uning.com,DIRECT
 DOMAIN-SUFFIX,unsplash.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
+DOMAIN-SUFFIX,uyunad.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
 DOMAIN-SUFFIX,vcr2012.com,DIRECT
 DOMAIN-SUFFIX,vegslb.com,DIRECT
@@ -933,6 +961,7 @@ DOMAIN-SUFFIX,yixia.com,DIRECT
 DOMAIN-SUFFIX,yiyaojd.com,DIRECT
 DOMAIN-SUFFIX,yizhibo.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
+DOMAIN-SUFFIX,yksdks.com,DIRECT
 DOMAIN-SUFFIX,yoojia.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
