--- a/rules.conf
+++ b/rules.conf
@@ -54,6 +54,7 @@ DOMAIN-SUFFIX,17173.com,DIRECT
 DOMAIN-SUFFIX,178.com,DIRECT
 DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
+DOMAIN-SUFFIX,1rtb.net,DIRECT
 DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,21jingji.com,DIRECT
@@ -143,6 +144,7 @@ DOMAIN-SUFFIX,anquan.info,DIRECT
 DOMAIN-SUFFIX,anythinktech.com,DIRECT
 DOMAIN-SUFFIX,aoqijiaoyu.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
+DOMAIN-SUFFIX,app-measurement.com,DIRECT
 DOMAIN-SUFFIX,appadhoc.com,DIRECT
 DOMAIN-SUFFIX,apple886.com,DIRECT
 DOMAIN-SUFFIX,appsimg.com,DIRECT
@@ -181,6 +183,7 @@ DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bdurl.net,DIRECT
 DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
+DOMAIN-SUFFIX,beizi.biz,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
 DOMAIN-SUFFIX,bendibao.com,DIRECT
 DOMAIN-SUFFIX,bidchance.com,DIRECT
@@ -224,6 +227,7 @@ DOMAIN-SUFFIX,bytemaimg.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
+DOMAIN-SUFFIX,c360dn.com,DIRECT
 DOMAIN-SUFFIX,c7sky.com,DIRECT
 DOMAIN-SUFFIX,cailianpress.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
@@ -271,6 +275,7 @@ DOMAIN-SUFFIX,cli.im,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,cmbimg.com,DIRECT
+DOMAIN-SUFFIX,cmicapm.com,DIRECT
 DOMAIN-SUFFIX,cmpassport.com,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,cnblogs.com,DIRECT
@@ -295,6 +300,7 @@ DOMAIN-SUFFIX,damengxiang.me,DIRECT
 DOMAIN-SUFFIX,dandanzan.com,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
 DOMAIN-SUFFIX,daojia.com,DIRECT
+DOMAIN-SUFFIX,dcarapi.com,DIRECT
 DOMAIN-SUFFIX,dcarimg.com,DIRECT
 DOMAIN-SUFFIX,dcarstatic.com,DIRECT
 DOMAIN-SUFFIX,dcarvod.com,DIRECT
@@ -390,14 +396,17 @@ DOMAIN-SUFFIX,ganjistatic1.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
 DOMAIN-SUFFIX,gazellegames.net,DIRECT
 DOMAIN-SUFFIX,gcorelabs.com,DIRECT
+DOMAIN-SUFFIX,gdtimg.com,DIRECT
 DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,geilicdn.com,DIRECT
 DOMAIN-SUFFIX,geometryauto.com,DIRECT
 DOMAIN-SUFFIX,getpricetag.com,DIRECT
 DOMAIN-SUFFIX,getui.com,DIRECT
+DOMAIN-SUFFIX,getui.net,DIRECT
 DOMAIN-SUFFIX,gifhome.com,DIRECT
 DOMAIN-SUFFIX,gifshow.com,DIRECT
+DOMAIN-SUFFIX,giocdn.com,DIRECT
 DOMAIN-SUFFIX,gitv.tv,DIRECT
 DOMAIN-SUFFIX,globalsign.com,DIRECT
 DOMAIN-SUFFIX,godic.net,DIRECT
@@ -650,6 +659,7 @@ DOMAIN-SUFFIX,nim-lang-cn.org,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,nvidia.com,DIRECT
+DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
 DOMAIN-SUFFIX,office365.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
@@ -706,6 +716,7 @@ DOMAIN-SUFFIX,qichacha.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qiecdn.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
+DOMAIN-SUFFIX,qingting.fm,DIRECT
 DOMAIN-SUFFIX,qingzhouip.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
 DOMAIN-SUFFIX,qiniu.io,DIRECT
@@ -750,6 +761,7 @@ DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shipsoho.com,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
+DOMAIN-SUFFIX,shuqireader.com,DIRECT
 DOMAIN-SUFFIX,siam.org,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,sinaapp.com,DIRECT
@@ -846,6 +858,7 @@ DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
+DOMAIN-SUFFIX,ucweb.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
 DOMAIN-SUFFIX,udacity.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
@@ -962,6 +975,7 @@ DOMAIN-SUFFIX,yiyaojd.com,DIRECT
 DOMAIN-SUFFIX,yizhibo.com,DIRECT
 DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,yksdks.com,DIRECT
+DOMAIN-SUFFIX,yonghuivip.com,DIRECT
 DOMAIN-SUFFIX,yoojia.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
@@ -999,6 +1013,7 @@ DOMAIN-SUFFIX,zmz2019.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.net,DIRECT
 DOMAIN-SUFFIX,zmzfile.com,DIRECT
+DOMAIN-SUFFIX,zone139.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
 FINAL,PROXY
