--- a/rules.conf
+++ b/rules.conf
@@ -99,6 +99,7 @@ DOMAIN-SUFFIX,91flac.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
 DOMAIN-SUFFIX,9ku.com,DIRECT
 DOMAIN-SUFFIX,9xbuddy.app,DIRECT
+DOMAIN-SUFFIX,a5b.cc,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,abchina.com,DIRECT
 DOMAIN-SUFFIX,accuweather.com,DIRECT
@@ -106,6 +107,7 @@ DOMAIN-SUFFIX,acg.tv,DIRECT
 DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,acm.org,DIRECT
 DOMAIN-SUFFIX,acs.org,DIRECT
+DOMAIN-SUFFIX,adukwai.com,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aip.org,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
@@ -211,6 +213,7 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,byted-ug.com,DIRECT
@@ -355,6 +358,7 @@ DOMAIN-SUFFIX,ecombdapi.com,DIRECT
 DOMAIN-SUFFIX,ecombdimg.com,DIRECT
 DOMAIN-SUFFIX,ecombdpage.com,DIRECT
 DOMAIN-SUFFIX,ecombdstatic.com,DIRECT
+DOMAIN-SUFFIX,ecukwai.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
@@ -378,6 +382,7 @@ DOMAIN-SUFFIX,fangdd.com,DIRECT
 DOMAIN-SUFFIX,fanli.com,DIRECT
 DOMAIN-SUFFIX,fanlibang.com,DIRECT
 DOMAIN-SUFFIX,feiliao.com,DIRECT
+DOMAIN-SUFFIX,feishucdn.com,DIRECT
 DOMAIN-SUFFIX,feisuzhibo.com,DIRECT
 DOMAIN-SUFFIX,feng.com,DIRECT
 DOMAIN-SUFFIX,fengkongcloud.com,DIRECT
@@ -401,6 +406,7 @@ DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,geilicdn.com,DIRECT
 DOMAIN-SUFFIX,geometryauto.com,DIRECT
+DOMAIN-SUFFIX,gepush.com,DIRECT
 DOMAIN-SUFFIX,getpricetag.com,DIRECT
 DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,getui.net,DIRECT
@@ -410,6 +416,7 @@ DOMAIN-SUFFIX,giocdn.com,DIRECT
 DOMAIN-SUFFIX,gitv.tv,DIRECT
 DOMAIN-SUFFIX,globalsign.com,DIRECT
 DOMAIN-SUFFIX,godic.net,DIRECT
+DOMAIN-SUFFIX,goofish.com,DIRECT
 DOMAIN-SUFFIX,gratisography.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,grg-gas.com,DIRECT
@@ -431,8 +438,10 @@ DOMAIN-SUFFIX,hdhome.org,DIRECT
 DOMAIN-SUFFIX,hdsky.me,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,heikeyun.net,DIRECT
+DOMAIN-SUFFIX,hellobixin.com,DIRECT
 DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
+DOMAIN-SUFFIX,hibixin.com,DIRECT
 DOMAIN-SUFFIX,hicloud.com,DIRECT
 DOMAIN-SUFFIX,hima.auto,DIRECT
 DOMAIN-SUFFIX,hitv.com,DIRECT
@@ -473,6 +482,7 @@ DOMAIN-SUFFIX,ifeng.com,DIRECT
 DOMAIN-SUFFIX,iflyrec.com,DIRECT
 DOMAIN-SUFFIX,iflytek.com,DIRECT
 DOMAIN-SUFFIX,igamecj.com,DIRECT
+DOMAIN-SUFFIX,igexin.com,DIRECT
 DOMAIN-SUFFIX,iguoguo.net,DIRECT
 DOMAIN-SUFFIX,ikanfan.com,DIRECT
 DOMAIN-SUFFIX,imf.org,DIRECT
@@ -483,6 +493,7 @@ DOMAIN-SUFFIX,immotors.com,DIRECT
 DOMAIN-SUFFIX,imooc.com,DIRECT
 DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,infoq.com,DIRECT
+DOMAIN-SUFFIX,inkuai.com,DIRECT
 DOMAIN-SUFFIX,iop.org,DIRECT
 DOMAIN-SUFFIX,ip.la,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
@@ -508,6 +519,8 @@ DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,jdapi.com,DIRECT
 DOMAIN-SUFFIX,jdbusiness.com,DIRECT
 DOMAIN-SUFFIX,jdcloud.com,DIRECT
+DOMAIN-SUFFIX,jdcloud-oss.com,DIRECT
+DOMAIN-SUFFIX,jddebug.com,DIRECT
 DOMAIN-SUFFIX,jdl.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
@@ -528,6 +541,7 @@ DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
+DOMAIN-SUFFIX,joying.com,DIRECT
 DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
 DOMAIN-SUFFIX,jstor.org,DIRECT
 DOMAIN-SUFFIX,jstucdn.com,DIRECT
@@ -540,12 +554,18 @@ DOMAIN-SUFFIX,keepcdn.com,DIRECT
 DOMAIN-SUFFIX,keepfrds.com,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
+DOMAIN-SUFFIX,kfzimg.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
 DOMAIN-SUFFIX,komect.com,DIRECT
+DOMAIN-SUFFIX,kongfz.com,DIRECT
+DOMAIN-SUFFIX,kongpm.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
+DOMAIN-SUFFIX,ksapisrv.com,DIRECT
+DOMAIN-SUFFIX,kskwai.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
+DOMAIN-SUFFIX,kspkg.com,DIRECT
 DOMAIN-SUFFIX,ksyun.com,DIRECT
 DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
@@ -555,6 +575,9 @@ DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,kuiniuca.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
 DOMAIN-SUFFIX,kvov.com,DIRECT
+DOMAIN-SUFFIX,kwaicdn.com,DIRECT
+DOMAIN-SUFFIX,kwaixiaodian.com,DIRECT
+DOMAIN-SUFFIX,kwimgs.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,lanosso.com,DIRECT
 DOMAIN-SUFFIX,lanrar.com,DIRECT
@@ -650,6 +673,7 @@ DOMAIN-SUFFIX,nanrenwo.net,DIRECT
 DOMAIN-SUFFIX,nanyangpt.com,DIRECT
 DOMAIN-SUFFIX,nature.com,DIRECT
 DOMAIN-SUFFIX,ncore.cc,DIRECT
+DOMAIN-SUFFIX,ndcimgs.com,DIRECT
 DOMAIN-SUFFIX,ndcpp.com,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,netease.im,DIRECT
@@ -688,9 +712,13 @@ DOMAIN-SUFFIX,paypal.com,DIRECT
 DOMAIN-SUFFIX,paypalobjects.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
+DOMAIN-SUFFIX,pddpic.com,DIRECT
+DOMAIN-SUFFIX,pddugc.com,DIRECT
 DOMAIN-SUFFIX,pexels.com,DIRECT
 DOMAIN-SUFFIX,pglstatp-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pianbar.com,DIRECT
+DOMAIN-SUFFIX,pinduoduo.com,DIRECT
+DOMAIN-SUFFIX,pinduoduo.net,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
 DOMAIN-SUFFIX,pluwen.com,DIRECT
 DOMAIN-SUFFIX,pnas.org,DIRECT
@@ -729,6 +757,7 @@ DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.net,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
+DOMAIN-SUFFIX,qqmail.com,DIRECT
 DOMAIN-SUFFIX,qunar.com,DIRECT
 DOMAIN-SUFFIX,qunliao.info,DIRECT
 DOMAIN-SUFFIX,qy.net,DIRECT
@@ -744,6 +773,7 @@ DOMAIN-SUFFIX,ronghub.com,DIRECT
 DOMAIN-SUFFIX,router.asus.com,DIRECT
 DOMAIN-SUFFIX,rsc.org,DIRECT
 DOMAIN-SUFFIX,rtbasia.com,DIRECT
+DOMAIN-SUFFIX,rtxapp.com,DIRECT
 DOMAIN-SUFFIX,ruguoapp.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,sagepub.com,DIRECT
@@ -755,8 +785,10 @@ DOMAIN-SUFFIX,sciencemag.org,DIRECT
 DOMAIN-SUFFIX,scomper.me,DIRECT
 DOMAIN-SUFFIX,scopus.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
+DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
+DOMAIN-SUFFIX,shanrongmall.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shipsoho.com,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
@@ -799,6 +831,7 @@ DOMAIN-SUFFIX,springsunday.net,DIRECT
 DOMAIN-SUFFIX,s-reader.com,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,ssports.com,DIRECT
+DOMAIN-SUFFIX,ssrcdn.com,DIRECT
 DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,steam-chat.com,DIRECT
@@ -832,7 +865,7 @@ DOMAIN-SUFFIX,tencentcs.com,DIRECT
 DOMAIN-SUFFIX,tencentmusic.com,DIRECT
 DOMAIN-SUFFIX,tengshiauto.com,DIRECT
 DOMAIN-SUFFIX,tenpay.com,DIRECT
-DOMAIN-SUFFIX,test-ipv6.com,DIRECT
+DOMAIN-SUFFIX,tfogc.com,DIRECT
 DOMAIN-SUFFIX,tianpeng.com,DIRECT
 DOMAIN-SUFFIX,tianqi.com,DIRECT
 DOMAIN-SUFFIX,tianqistatic.com,DIRECT
@@ -866,6 +899,7 @@ DOMAIN-SUFFIX,ugdtimg.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,umengcloud.com,DIRECT
+DOMAIN-SUFFIX,umsns.com,DIRECT
 DOMAIN-SUFFIX,un.org,DIRECT
 DOMAIN-SUFFIX,undraw.co,DIRECT
 DOMAIN-SUFFIX,uni-bielefeld.de,DIRECT
@@ -892,6 +926,7 @@ DOMAIN-SUFFIX,voidcn.com,DIRECT
 DOMAIN-SUFFIX,volccdn.com,DIRECT
 DOMAIN-SUFFIX,volceapplog.com,DIRECT
 DOMAIN-SUFFIX,volces.com,DIRECT
+DOMAIN-SUFFIX,volcimagex.net,DIRECT
 DOMAIN-SUFFIX,vpimg2.com,DIRECT
 DOMAIN-SUFFIX,vpimg3.com,DIRECT
 DOMAIN-SUFFIX,vpimg4.com,DIRECT
@@ -908,11 +943,13 @@ DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weibocdn.com,DIRECT
 DOMAIN-SUFFIX,weico.cc,DIRECT
 DOMAIN-SUFFIX,weidian.com,DIRECT
+DOMAIN-SUFFIX,weidianfans.com,DIRECT
 DOMAIN-SUFFIX,weixin.com,DIRECT
 DOMAIN-SUFFIX,weixinbridge.com,DIRECT
 DOMAIN-SUFFIX,weixinsxy.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,wendangku.net,DIRECT
+DOMAIN-SUFFIX,wenyu6.com,DIRECT
 DOMAIN-SUFFIX,weshape3d.com,DIRECT
 DOMAIN-SUFFIX,westlaw.com,DIRECT
 DOMAIN-SUFFIX,wey.com,DIRECT
@@ -934,6 +971,7 @@ DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
+DOMAIN-SUFFIX,xhscdn.net,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
@@ -979,11 +1017,13 @@ DOMAIN-SUFFIX,yonghuivip.com,DIRECT
 DOMAIN-SUFFIX,yoojia.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,yppstatic.com,DIRECT
 DOMAIN-SUFFIX,yuewen.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
 DOMAIN-SUFFIX,yunpei.com,DIRECT
 DOMAIN-SUFFIX,yunshi99.com,DIRECT
+DOMAIN-SUFFIX,yunxindns.com,DIRECT
 DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
