--- a/rules.conf
+++ b/rules.conf
@@ -198,6 +198,7 @@ DOMAIN-SUFFIX,biligame.net,DIRECT
 DOMAIN-SUFFIX,biliimg.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.com,DIRECT
 DOMAIN-SUFFIX,bilivideo.net,DIRECT
+DOMAIN-SUFFIX,bing123.com,DIRECT
 DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bitautoimg.com,DIRECT
 DOMAIN-SUFFIX,bjango.com,DIRECT
@@ -499,7 +500,6 @@ DOMAIN-SUFFIX,ip.la,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ip-cdn.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,ipleak.net,DIRECT
 DOMAIN-SUFFIX,ipv6-test.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
@@ -953,7 +953,6 @@ DOMAIN-SUFFIX,wenyu6.com,DIRECT
 DOMAIN-SUFFIX,weshape3d.com,DIRECT
 DOMAIN-SUFFIX,westlaw.com,DIRECT
 DOMAIN-SUFFIX,wey.com,DIRECT
-DOMAIN-SUFFIX,whatismyip.com,DIRECT
 DOMAIN-SUFFIX,wiley.com,DIRECT
 DOMAIN-SUFFIX,win4000.com,DIRECT
 DOMAIN-SUFFIX,windows.com,DIRECT
