--- a/rules.conf
+++ b/rules.conf
@@ -38,7 +38,7 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
-DOMAIN-SUFFIX,10010.com,DIRECT
+DOMAIN-SUFFIX,110010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,12365auto.com,DIRECT
@@ -52,6 +52,7 @@ DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,1688.com,DIRECT
 DOMAIN-SUFFIX,17173.com,DIRECT
 DOMAIN-SUFFIX,178.com,DIRECT
+DOMAIN-SUFFIX,17usoft.com,DIRECT
 DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
 DOMAIN-SUFFIX,1rtb.net,DIRECT
@@ -109,6 +110,7 @@ DOMAIN-SUFFIX,acm.org,DIRECT
 DOMAIN-SUFFIX,acs.org,DIRECT
 DOMAIN-SUFFIX,adukwai.com,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
+DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,aip.org,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,air-matters.io,DIRECT
@@ -170,6 +172,7 @@ DOMAIN-SUFFIX,baduziyuan.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidubcr.com,DIRECT
 DOMAIN-SUFFIX,baidupcs.com,DIRECT
+DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
@@ -203,6 +206,7 @@ DOMAIN-SUFFIX,bitauto.com,DIRECT
 DOMAIN-SUFFIX,bitautoimg.com,DIRECT
 DOMAIN-SUFFIX,bjango.com,DIRECT
 DOMAIN-SUFFIX,bjcathay.com,DIRECT
+DOMAIN-SUFFIX,black-unique.com,DIRECT
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,bmcx.com,DIRECT
 DOMAIN-SUFFIX,bmj.com,DIRECT
@@ -214,6 +218,7 @@ DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,bstatic.com,DIRECT
 DOMAIN-SUFFIX,bwhstatus.com,DIRECT
+DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
@@ -268,10 +273,11 @@ DOMAIN-SUFFIX,chongdiantou.com,DIRECT
 DOMAIN-SUFFIX,chua.pro,DIRECT
 DOMAIN-SUFFIX,chuimg.com,DIRECT
 DOMAIN-SUFFIX,chunyu.mobi,DIRECT
-DOMAIN-SUFFIX,chushou.tv,DIRECT
+DOMAIN-SUFFIX,chuxingyouhui.com,DIRECT
 DOMAIN-SUFFIX,cibntv.net,DIRECT
 DOMAIN-SUFFIX,citicbank.com,DIRECT
 DOMAIN-SUFFIX,ci-du.com,DIRECT
+DOMAIN-SUFFIX,cl2009.com,DIRECT
 DOMAIN-SUFFIX,clarivate.com,DIRECT
 DOMAIN-SUFFIX,classix-unlimited.co.uk,DIRECT
 DOMAIN-SUFFIX,clewm.net,DIRECT
@@ -311,7 +317,6 @@ DOMAIN-SUFFIX,dcarvod.com,DIRECT
 DOMAIN-SUFFIX,dcdapp.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,dd-advisor.com,DIRECT
-DOMAIN-SUFFIX,ddrk.me,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dfcfw.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
@@ -367,6 +372,8 @@ DOMAIN-SUFFIX,ele.me,DIRECT
 DOMAIN-SUFFIX,elecfans.com,DIRECT
 DOMAIN-SUFFIX,elemecdn.com,DIRECT
 DOMAIN-SUFFIX,elian360.com,DIRECT
+DOMAIN-SUFFIX,elong.com,DIRECT
+DOMAIN-SUFFIX,elongstatic.com,DIRECT
 DOMAIN-SUFFIX,emerald.com,DIRECT
 DOMAIN-SUFFIX,empornium.me,DIRECT
 DOMAIN-SUFFIX,engineeringvillage.com,DIRECT
@@ -382,6 +389,7 @@ DOMAIN-SUFFIX,fangchengbao.com,DIRECT
 DOMAIN-SUFFIX,fangdd.com,DIRECT
 DOMAIN-SUFFIX,fanli.com,DIRECT
 DOMAIN-SUFFIX,fanlibang.com,DIRECT
+DOMAIN-SUFFIX,fcbox.com,DIRECT
 DOMAIN-SUFFIX,feiliao.com,DIRECT
 DOMAIN-SUFFIX,feishucdn.com,DIRECT
 DOMAIN-SUFFIX,feisuzhibo.com,DIRECT
@@ -458,6 +466,7 @@ DOMAIN-SUFFIX,huashu-inc.com,DIRECT
 DOMAIN-SUFFIX,huawei.com,DIRECT
 DOMAIN-SUFFIX,huaweicloud.com,DIRECT
 DOMAIN-SUFFIX,huaweistatic.com,DIRECT
+DOMAIN-SUFFIX,huazirc.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
@@ -465,6 +474,7 @@ DOMAIN-SUFFIX,huxiucdn.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
 DOMAIN-SUFFIX,hwxnet.com,DIRECT
 DOMAIN-SUFFIX,hyext.com,DIRECT
+DOMAIN-SUFFIX,hzchengdun.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,ibytedapm.com,DIRECT
 DOMAIN-SUFFIX,icarglobal.com,DIRECT
@@ -615,6 +625,7 @@ DOMAIN-SUFFIX,longzhu.com,DIRECT
 DOMAIN-SUFFIX,longzhulive.com,DIRECT
 DOMAIN-SUFFIX,luojilab.com,DIRECT
 DOMAIN-SUFFIX,lvmama.com,DIRECT
+DOMAIN-SUFFIX,ly.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,madsrevolution.net,DIRECT
 DOMAIN-SUFFIX,mafengwo.net,DIRECT
@@ -653,13 +664,12 @@ DOMAIN-SUFFIX,mogucdn.com,DIRECT
 DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,moke.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
-DOMAIN-SUFFIX,morethan.tv,DIRECT
-DOMAIN-SUFFIX,mpg.de,DIRECT
 DOMAIN-SUFFIX,msecnd.net,DIRECT
 DOMAIN-SUFFIX,msstatic.com,DIRECT
 DOMAIN-SUFFIX,m-team.cc,DIRECT
 DOMAIN-SUFFIX,mtime.com,DIRECT
 DOMAIN-SUFFIX,mubu.com,DIRECT
+DOMAIN-SUFFIX,muniao.com,DIRECT
 DOMAIN-SUFFIX,mxhichina.com,DIRECT
 DOMAIN-SUFFIX,myanonamouse.net,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
@@ -687,7 +697,7 @@ DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
 DOMAIN-SUFFIX,office365.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
-DOMAIN-SUFFIX,open.cd,DIRECT
+DOMAIN-SUFFIX,openinstall.io,DIRECT
 DOMAIN-SUFFIX,oraev.com,DIRECT
 DOMAIN-SUFFIX,osapublishing.org,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
@@ -705,6 +715,7 @@ DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panda.tv,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
+DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
 DOMAIN-SUFFIX,passthepopcorn.me,DIRECT
 DOMAIN-SUFFIX,pastebin.com,DIRECT
@@ -787,11 +798,14 @@ DOMAIN-SUFFIX,scopus.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
+DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shanrongmall.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,shipsoho.com,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
+DOMAIN-SUFFIX,shujupie.com,DIRECT
+DOMAIN-SUFFIX,shunchangzhixing.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,shuqireader.com,DIRECT
 DOMAIN-SUFFIX,siam.org,DIRECT
@@ -844,6 +858,7 @@ DOMAIN-SUFFIX,steamusercontent.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
+DOMAIN-SUFFIX,sxnfss.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,taijizhidian.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
@@ -884,6 +899,7 @@ DOMAIN-SUFFIX,totheglory.im,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
 DOMAIN-SUFFIX,toutiaostatic.com,DIRECT
+DOMAIN-SUFFIX,trackingio.com,DIRECT
 DOMAIN-SUFFIX,ttkdex.com,DIRECT
 DOMAIN-SUFFIX,tuanche.com,DIRECT
 DOMAIN-SUFFIX,tuchong.com,DIRECT
@@ -900,19 +916,22 @@ DOMAIN-SUFFIX,uisdc.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,umengcloud.com,DIRECT
 DOMAIN-SUFFIX,umsns.com,DIRECT
+DOMAIN-SUFFIX,umtrack.com,DIRECT
 DOMAIN-SUFFIX,un.org,DIRECT
-DOMAIN-SUFFIX,undraw.co,DIRECT
-DOMAIN-SUFFIX,uni-bielefeld.de,DIRECT
+DOMAIN-SUFFIX,unicompayment.com,DIRECT
 DOMAIN-SUFFIX,uning.com,DIRECT
 DOMAIN-SUFFIX,unsplash.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
+DOMAIN-SUFFIX,uupt.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,uyunad.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
+DOMAIN-SUFFIX,variflight.com,DIRECT
 DOMAIN-SUFFIX,vcr2012.com,DIRECT
 DOMAIN-SUFFIX,vegslb.com,DIRECT
 DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
+DOMAIN-SUFFIX,veryzhun.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
 DOMAIN-SUFFIX,vipmro.com,DIRECT
