--- a/rules.conf
+++ b/rules.conf
@@ -4,7 +4,7 @@ skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 239.255.255.250/32, 255.255.255.255/32
 dns-server = 223.5.5.5, 223.6.6.6
 fallback-dns-server = system
-ipv6 = true
+ipv6 = false
 prefer-ipv6 = false
 dns-direct-system = false
 icmp-auto-reply = true
@@ -38,7 +38,7 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
-DOMAIN-SUFFIX,110010.com,DIRECT
+DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,12365auto.com,DIRECT
@@ -72,6 +72,7 @@ DOMAIN-SUFFIX,365icl.com,DIRECT
 DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
 DOMAIN-SUFFIX,3dmgame.com,DIRECT
+DOMAIN-SUFFIX,4008123123.com,DIRECT
 DOMAIN-SUFFIX,4399.com,DIRECT
 DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
@@ -108,6 +109,7 @@ DOMAIN-SUFFIX,acg.tv,DIRECT
 DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,acm.org,DIRECT
 DOMAIN-SUFFIX,acs.org,DIRECT
+DOMAIN-SUFFIX,adkwai.com,DIRECT
 DOMAIN-SUFFIX,adukwai.com,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aikucun.com,DIRECT
@@ -116,6 +118,7 @@ DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,air-matters.io,DIRECT
 DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
+DOMAIN-SUFFIX,ajkimg.com,DIRECT
 DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
@@ -195,7 +198,7 @@ DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,biliapi.com,DIRECT
 DOMAIN-SUFFIX,biliapi.net,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
-DOMAIN-SUFFIX,bilibili.tv,DIRECT
+DOMAIN-SUFFIX,bilicomics.com,DIRECT
 DOMAIN-SUFFIX,biligame.com,DIRECT
 DOMAIN-SUFFIX,biligame.net,DIRECT
 DOMAIN-SUFFIX,biliimg.com,DIRECT
@@ -399,6 +402,7 @@ DOMAIN-SUFFIX,fengniao.com,DIRECT
 DOMAIN-SUFFIX,fjhps.com,DIRECT
 DOMAIN-SUFFIX,fliggy.com,DIRECT
 DOMAIN-SUFFIX,frdic.com,DIRECT
+DOMAIN-SUFFIX,freshippo.com,DIRECT
 DOMAIN-SUFFIX,futu5.com,DIRECT
 DOMAIN-SUFFIX,futunn.com,DIRECT
 DOMAIN-SUFFIX,gacmotor.com,DIRECT
@@ -413,6 +417,7 @@ DOMAIN-SUFFIX,gcorelabs.com,DIRECT
 DOMAIN-SUFFIX,gdtimg.com,DIRECT
 DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
+DOMAIN-SUFFIX,geevisit.com,DIRECT
 DOMAIN-SUFFIX,geilicdn.com,DIRECT
 DOMAIN-SUFFIX,geometryauto.com,DIRECT
 DOMAIN-SUFFIX,gepush.com,DIRECT
@@ -452,6 +457,7 @@ DOMAIN-SUFFIX,hellorf.com,DIRECT
 DOMAIN-SUFFIX,hexun.com,DIRECT
 DOMAIN-SUFFIX,hibixin.com,DIRECT
 DOMAIN-SUFFIX,hicloud.com,DIRECT
+DOMAIN-SUFFIX,hiecheimaetu.com,DIRECT
 DOMAIN-SUFFIX,hima.auto,DIRECT
 DOMAIN-SUFFIX,hitv.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
@@ -472,9 +478,11 @@ DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huxiucdn.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
+DOMAIN-SUFFIX,hwwt8.com,DIRECT
 DOMAIN-SUFFIX,hwxnet.com,DIRECT
 DOMAIN-SUFFIX,hyext.com,DIRECT
 DOMAIN-SUFFIX,hzchengdun.com,DIRECT
+DOMAIN-SUFFIX,hzshudian.com,DIRECT
 DOMAIN-SUFFIX,ibaotu.com,DIRECT
 DOMAIN-SUFFIX,ibytedapm.com,DIRECT
 DOMAIN-SUFFIX,icarglobal.com,DIRECT
@@ -531,6 +539,7 @@ DOMAIN-SUFFIX,jdbusiness.com,DIRECT
 DOMAIN-SUFFIX,jdcloud.com,DIRECT
 DOMAIN-SUFFIX,jdcloud-oss.com,DIRECT
 DOMAIN-SUFFIX,jddebug.com,DIRECT
+DOMAIN-SUFFIX,jddj.com,DIRECT
 DOMAIN-SUFFIX,jdl.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
@@ -542,23 +551,26 @@ DOMAIN-SUFFIX,jianshu.com,DIRECT
 DOMAIN-SUFFIX,jianshu.io,DIRECT
 DOMAIN-SUFFIX,jiathis.com,DIRECT
 DOMAIN-SUFFIX,jiayuan.com,DIRECT
-DOMAIN-SUFFIX,jidian.im,DIRECT
+DOMAIN-SUFFIX,jindidata.com,DIRECT
 DOMAIN-SUFFIX,jingxi.com,DIRECT
 DOMAIN-SUFFIX,jinmingxuan.com,DIRECT
 DOMAIN-SUFFIX,jinritemai.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
+DOMAIN-SUFFIX,joinchitchat.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
 DOMAIN-SUFFIX,joying.com,DIRECT
 DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
+DOMAIN-SUFFIX,jpush.io,DIRECT
 DOMAIN-SUFFIX,jstor.org,DIRECT
 DOMAIN-SUFFIX,jstucdn.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,karger.com,DIRECT
 DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
+DOMAIN-SUFFIX,kcdnvip.com,DIRECT
 DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,keepcdn.com,DIRECT
 DOMAIN-SUFFIX,keepfrds.com,DIRECT
@@ -614,6 +626,7 @@ DOMAIN-SUFFIX,leyunge.com,DIRECT
 DOMAIN-SUFFIX,lf127.net,DIRECT
 DOMAIN-SUFFIX,liangxinyao.com,DIRECT
 DOMAIN-SUFFIX,lianjia.com,DIRECT
+DOMAIN-SUFFIX,lianqi.net,DIRECT
 DOMAIN-SUFFIX,libguides.com,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
@@ -625,6 +638,7 @@ DOMAIN-SUFFIX,longzhu.com,DIRECT
 DOMAIN-SUFFIX,longzhulive.com,DIRECT
 DOMAIN-SUFFIX,luojilab.com,DIRECT
 DOMAIN-SUFFIX,lvmama.com,DIRECT
+DOMAIN-SUFFIX,lxdns.com,DIRECT
 DOMAIN-SUFFIX,ly.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,madsrevolution.net,DIRECT
@@ -671,6 +685,7 @@ DOMAIN-SUFFIX,mtime.com,DIRECT
 DOMAIN-SUFFIX,mubu.com,DIRECT
 DOMAIN-SUFFIX,muniao.com,DIRECT
 DOMAIN-SUFFIX,mxhichina.com,DIRECT
+DOMAIN-SUFFIX,myalicdn.com,DIRECT
 DOMAIN-SUFFIX,myanonamouse.net,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
@@ -695,7 +710,7 @@ DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,nvidia.com,DIRECT
 DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
-DOMAIN-SUFFIX,office365.com,DIRECT
+DOMAIN-SUFFIX,onethingpcs.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
 DOMAIN-SUFFIX,oraev.com,DIRECT
@@ -743,6 +758,7 @@ DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,proquest.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
 DOMAIN-SUFFIX,pterclub.com,DIRECT
+DOMAIN-SUFFIX,q2cdn.com,DIRECT
 DOMAIN-SUFFIX,qbox.me,DIRECT
 DOMAIN-SUFFIX,qcc.com,DIRECT
 DOMAIN-SUFFIX,qcloud.com,DIRECT
@@ -887,7 +903,8 @@ DOMAIN-SUFFIX,tianqistatic.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
-DOMAIN-SUFFIX,tjupt.org,DIRECT
+DOMAIN-SUFFIX,tliveplay.com,DIRECT
+DOMAIN-SUFFIX,tlivesource.com,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
 DOMAIN-SUFFIX,tmall.hk,DIRECT
 DOMAIN-SUFFIX,tmxbk39.com,DIRECT
@@ -998,6 +1015,7 @@ DOMAIN-SUFFIX,xiaohongshu.com,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
 DOMAIN-SUFFIX,xiaopeng.com,DIRECT
+DOMAIN-SUFFIX,xiaoyastar.com,DIRECT
 DOMAIN-SUFFIX,xiazaiba.com,DIRECT
 DOMAIN-SUFFIX,xiazaizhijia.com,DIRECT
 DOMAIN-SUFFIX,ximalaya.com,DIRECT
@@ -1035,8 +1053,10 @@ DOMAIN-SUFFIX,yonghuivip.com,DIRECT
 DOMAIN-SUFFIX,yoojia.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,youzhi.net,DIRECT
 DOMAIN-SUFFIX,yppstatic.com,DIRECT
 DOMAIN-SUFFIX,yuewen.com,DIRECT
+DOMAIN-SUFFIX,yumchina.com,DIRECT
 DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
 DOMAIN-SUFFIX,yunpei.com,DIRECT
