--- a/rules.conf
+++ b/rules.conf
@@ -111,6 +111,7 @@ DOMAIN-SUFFIX,acm.org,DIRECT
 DOMAIN-SUFFIX,acs.org,DIRECT
 DOMAIN-SUFFIX,adkwai.com,DIRECT
 DOMAIN-SUFFIX,adukwai.com,DIRECT
+DOMAIN-SUFFIX,agora.io,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,aip.org,DIRECT
@@ -224,9 +225,11 @@ DOMAIN-SUFFIX,bwhstatus.com,DIRECT
 DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
+DOMAIN-SUFFIX,bytecdn.com,DIRECT
 DOMAIN-SUFFIX,byted-static.com,DIRECT
 DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
+DOMAIN-SUFFIX,bytedance.net,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
 DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
@@ -358,6 +361,7 @@ DOMAIN-SUFFIX,dxycdn.com,DIRECT
 DOMAIN-SUFFIX,dytt8.net,DIRECT
 DOMAIN-SUFFIX,dz11.com,DIRECT
 DOMAIN-SUFFIX,easebar.com,DIRECT
+DOMAIN-SUFFIX,easemob.com,DIRECT
 DOMAIN-SUFFIX,eastday.com,DIRECT
 DOMAIN-SUFFIX,eastmoney.com,DIRECT
 DOMAIN-SUFFIX,easytomessage.com,DIRECT
@@ -385,6 +389,7 @@ DOMAIN-SUFFIX,etao.com,DIRECT
 DOMAIN-SUFFIX,etoote.com,DIRECT
 DOMAIN-SUFFIX,eudic.net,DIRECT
 DOMAIN-SUFFIX,exeedcars.com,DIRECT
+DOMAIN-SUFFIX,faceu.mobi,DIRECT
 DOMAIN-SUFFIX,fadada.com,DIRECT
 DOMAIN-SUFFIX,fancyapi.com,DIRECT
 DOMAIN-SUFFIX,fang.com,DIRECT
@@ -650,6 +655,7 @@ DOMAIN-SUFFIX,maoyun.tv,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,meimingteng.com,DIRECT
 DOMAIN-SUFFIX,meipai.com,DIRECT
+DOMAIN-SUFFIX,meishi.cc,DIRECT
 DOMAIN-SUFFIX,meishij.net,DIRECT
 DOMAIN-SUFFIX,meitu.com,DIRECT
 DOMAIN-SUFFIX,meituan.com,DIRECT
@@ -930,6 +936,7 @@ DOMAIN-SUFFIX,udacity.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
 DOMAIN-SUFFIX,ugdtimg.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
+DOMAIN-SUFFIX,ulikecam.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,umengcloud.com,DIRECT
 DOMAIN-SUFFIX,umsns.com,DIRECT
@@ -955,6 +962,7 @@ DOMAIN-SUFFIX,vipmro.com,DIRECT
 DOMAIN-SUFFIX,vipmro.net,DIRECT
 DOMAIN-SUFFIX,vipstatic.com,DIRECT
 DOMAIN-SUFFIX,visualhunt.com,DIRECT
+DOMAIN-SUFFIX,vlabstatic.com,DIRECT
 DOMAIN-SUFFIX,vmall.com,DIRECT
 DOMAIN-SUFFIX,vmallres.com,DIRECT
 DOMAIN-SUFFIX,vmware.com,DIRECT
@@ -963,6 +971,9 @@ DOMAIN-SUFFIX,volccdn.com,DIRECT
 DOMAIN-SUFFIX,volceapplog.com,DIRECT
 DOMAIN-SUFFIX,volces.com,DIRECT
 DOMAIN-SUFFIX,volcimagex.net,DIRECT
+DOMAIN-SUFFIX,volcvideo.com,DIRECT
+DOMAIN-SUFFIX,volcvod.com,DIRECT
+DOMAIN-SUFFIX,vpimg1.com,DIRECT
 DOMAIN-SUFFIX,vpimg2.com,DIRECT
 DOMAIN-SUFFIX,vpimg3.com,DIRECT
 DOMAIN-SUFFIX,vpimg4.com,DIRECT
@@ -1023,7 +1034,7 @@ DOMAIN-SUFFIX,xin.com,DIRECT
 DOMAIN-SUFFIX,xinchacha.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
-DOMAIN-SUFFIX,xitu.io,DIRECT
+DOMAIN-SUFFIX,xiyacs.com,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
 DOMAIN-SUFFIX,xshiqi.com,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
